bookstore-frontend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-frontend
  labels:
    app: bookstore-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bookstore-frontend
  template:
    metadata:
      labels:
        app: bookstore-frontend
    spec:
      containers:
        - name: bookstore-frontend
          image: khawlarouiss/bookstore-frontend:PLACEHOLDER
          ports:
            - containerPort: 8090
