bookstore-frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstore-frontend
  labels:
    app: bookstore-frontend
spec:
  type: ClusterIP
  selector:
    app: bookstore-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8090
